[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://imagens/BackgroundTelaInicial.jpeg" type="Texture" id=2]
[ext_resource path="res://Script/primeiraTela.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="startScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 81.0
script = ExtResource( 3 )

[node name="FundoFuturista" type="Sprite" parent="."]
visible = false
position = Vector2( 491, 329 )
scale = Vector2( 0.97103, 0.933962 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -77.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -19.5
margin_right = 105.0
margin_bottom = 78.5

[node name="startBtn" type="Button" parent="controls"]
margin_right = 270.0
margin_bottom = 30.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Iniciar"
expand_icon = true

[node name="objetivoBtn" type="Button" parent="controls"]
margin_top = 34.0
margin_right = 270.0
margin_bottom = 64.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Objetivo"
expand_icon = true

[node name="controlBtn" type="Button" parent="controls"]
margin_top = 68.0
margin_right = 270.0
margin_bottom = 98.0
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Controles"
expand_icon = true

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 102.0
margin_right = 270.0
margin_bottom = 132.0
focus_neighbour_bottom = NodePath("../startBtn")
theme = SubResource( 2 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sair"
expand_icon = true

[connection signal="pressed" from="controls/startBtn" to="." method="_on_startBtn_pressed"]
[connection signal="pressed" from="controls/objetivoBtn" to="." method="_on_objetivoBtn_pressed"]
[connection signal="pressed" from="controls/controlBtn" to="." method="_on_controlBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
